@@ -5,12 +5,10 @@ import com.fasterxml.jackson.core.JsonToken;
 import com.fasterxml.jackson.core.ObjectCodec;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
-import com.fasterxml.jackson.databind.type.CollectionLikeType;
 import com.fasterxml.jackson.databind.util.TokenBuffer;
 import fr.insee.vtl.model.Dataset;
 import fr.insee.vtl.model.InMemoryDataset;
 import fr.insee.vtl.model.Structured;
-import fr.insee.vtl.model.utils.Java8Helpers;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -26,8 +24,8 @@ import static com.fasterxml.jackson.databind.JsonMappingException.from;
  */
 public class DatasetDeserializer extends StdDeserializer<Dataset> {
 
-    private static final Set<String> STRUCTURE_NAMES = Java8Helpers.setOf("structure", "dataStructure");
-    private static final Set<String> DATAPOINT_NAMES = Java8Helpers.setOf("data", "dataPoints");
+    private static final Set<String> STRUCTURE_NAMES = Set.of("structure", "dataStructure");
+    private static final Set<String> DATAPOINT_NAMES = Set.of("data", "dataPoints");
 
     /**
      * Base constructor.
@@ -83,20 +81,20 @@ public class DatasetDeserializer extends StdDeserializer<Dataset> {
 
         for (List<Object> object : objects) {
             for (int i = 0; i < object.size(); i++) {
-                Object converted = deserializers.get(i).convert(p, object.get(i));
+                var converted = deserializers.get(i).convert(p, object.get(i));
                 object.set(i, converted);
             }
         }
     }
 
     private List<List<Object>> deserializeDataPoints(JsonParser p, DeserializationContext ctxt, List<Structured.Component> components) throws IOException {
-        String fieldName = p.currentName();
+        var fieldName = p.currentName();
         if (!DATAPOINT_NAMES.contains(fieldName)) {
             ctxt.handleUnexpectedToken(Dataset.class, p);
         }
 
         // row != array.
-        JsonToken token = p.nextToken();
+        var token = p.nextToken();
         if (token != JsonToken.START_ARRAY) {
             ctxt.handleUnexpectedToken(Dataset.class, p);
         }
@@ -109,8 +107,8 @@ public class DatasetDeserializer extends StdDeserializer<Dataset> {
 
         List<List<Object>> dataPoints = new ArrayList<>();
         while (p.nextToken() == JsonToken.START_ARRAY) {
-            List<Object> row = new ArrayList<>();
-            for (PointDeserializer deserializer : deserializers) {
+            var row = new ArrayList<>();
+            for (var deserializer : deserializers) {
                 p.nextValue();
                 row.add(deserializer.deserialize(p, ctxt));
             }
@@ -126,26 +124,26 @@ public class DatasetDeserializer extends StdDeserializer<Dataset> {
     }
 
     private List<List<Object>> deserializeUncheckedDataPoint(JsonParser p, DeserializationContext ctxt) throws IOException {
-        String fieldName = p.currentName();
+        var fieldName = p.currentName();
         if (!DATAPOINT_NAMES.contains(fieldName)) {
             ctxt.handleUnexpectedToken(Dataset.class, p);
         }
         p.nextToken();
 
-        CollectionLikeType listOfComponentType = ctxt.getTypeFactory().constructCollectionLikeType(List.class, List.class);
+        var listOfComponentType = ctxt.getTypeFactory().constructCollectionLikeType(List.class, List.class);
         return ctxt.readValue(p, listOfComponentType);
 
     }
 
     private List<Structured.Component> deserializeStructure(JsonParser p, DeserializationContext ctxt) throws IOException {
-        String fieldName = p.currentName();
+        var fieldName = p.currentName();
         if (!STRUCTURE_NAMES.contains(fieldName)) {
             ctxt.handleUnexpectedToken(Dataset.class, p);
         }
 
         p.nextToken();
 
-        CollectionLikeType listOfComponentType = ctxt.getTypeFactory().constructCollectionLikeType(List.class, Dataset.Component.class);
+        var listOfComponentType = ctxt.getTypeFactory().constructCollectionLikeType(List.class, Dataset.Component.class);
         return ctxt.readValue(p, listOfComponentType);
     }
 
@@ -162,7 +160,7 @@ public class DatasetDeserializer extends StdDeserializer<Dataset> {
         }
 
         Object convert(ObjectCodec codec, Object node, Class<?> type) throws IOException {
-            TokenBuffer buf = new TokenBuffer(codec, false);
+            var buf = new TokenBuffer(codec, false);
             codec.writeValue(buf, node);
             return buf.asParser().readValueAs(type);
         }
@@ -177,7 +175,7 @@ public class DatasetDeserializer extends StdDeserializer<Dataset> {
             } catch (IOException ioe) {
                 throw from(
                         p,
-                        String.format("failed to deserialize column %s", component.getName()),
+                        "failed to deserialize column %s".formatted(component.getName()),
                         ioe
                 );
             }
